# backfillz-py

./: .flake8  .gitignore  404.html  AUTHORS.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  conftest.py  design-notes.md  index.html  meeting-notes.md  mkdocs.yml  mypy.ini  pyproject.toml  refactoring-notes.md
.github/workflows/: build-publish.yml  code_quality_checks.yml  docs_publish.yml  pypi_publish.yml
backfillz/: .flake8  Backfillz.py  BackfillzTheme.py  PlotSliceHistogram.py  __init__.py  backfillz.py  core.py  data.py  density_plots.py  generate-sample-fit.py  mcmc_run.py  plot.py  slice_histogram.py  slice_histograms.py  spiral_stream.py  stan.py  theme.py  trace_dial.py  trace_dial_2.py  trace_slice_histogram.py
backfillz/example/: __init__.py  eight_schools.py
docs/: index.md
examples/: eight_schools.py
examples/notebooks/: example.ipynb
examples/notebooks/.ipynb_checkpoints/: example-checkpoint.ipynb
notebooks/: example.ipynb
notebooks/.ipynb_checkpoints/: example-checkpoint.ipynb
search/: search_index.json
tests/: conftest.py  generate_sample_fit.py  test_backfillz.py
