[tool]

[tool.poetry]
name = "backfillz"
version = "0.2.2"
homepage = "https://github.com/WarwickCIM/backfillz-py"
description = "MCMC visualisations package developed at the University of Warwick and supported by The Alan Turing Institute."
authors = ["James Tripp <james.tripp@warwick.ac.uk>", "Greg McInerny <g.mcinerny@warwick.ac.uk>", "Roly Perera <rperera@turing.ac.uk>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
]
include = [
    "LICENSE",
    "backfillz/py.typed"
]

[tool.poetry.dependencies]
python = "^3.9.0, <3.10"
importlib_metadata = "3.4.0"
pystan = "3.0.0"
plotly = "^4.14.3"
scipy = "^1.6.3"
numpy = "1.20.3"
nbval = "^0.9.6"
kaleido = "0.2.1" # 0.2.1.post1 won't install

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.1.5"
pytest = "^6.0"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-docstrings = "1.5.0"
flake8-import-order = "0.18.1"
flake8-colors = "0.1.6"

mypy = "0.812"

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
# no need for coverage right now
addopts = "-vv --color=yes" # --cov=backfillz --cov-branch --cov-report term-missing --cov-fail-under 100
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
